force-app/main/default/objects/JBCXM__CustomerInfo__c/JBCXM__CustomerInfo__c.object-meta.xml
<CustomObject>
    <description>Primary object that links Customers in the JBara repository with the records in Salesforce.com&apos;s Account object. For the JBara Customers who are using Salesforce.com as their CRM software, Customers will represent Accounts that have been converted into Customers with a new business transaction.</description>
    <label>Customer Info</label>
    <nameField>
        <displayFormat>JB{000000}</displayFormat>
        <label>Customer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>