force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <description>This relation links Customer to Accounts</description>
    <inlineHelpText>Select Account (in CRM) that you want to associate with the Customer record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers Info</relationshipLabel>
    <relationshipName>CustomersInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>