force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__ActiveAlertCount__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ActiveAlertCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Alert Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>