force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Churn__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Churn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to transaction to get the Churn information.</description>
    <inlineHelpText>Look up to transaction to get the Churn information.</inlineHelpText>
    <label>Churn</label>
    <referenceTo>JBCXM__TransHeader__c</referenceTo>
    <relationshipLabel>Customers Info</relationshipLabel>
    <relationshipName>Customers_Info</relationshipName>
    <type>Lookup</type>
</CustomField>