force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Comments__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Comments__c</fullName>
    <inlineHelpText>Enter any optional commentary related to the Customer. Max allowed length 4096 characters.</inlineHelpText>
    <label>Comments</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>