force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__CurScoreId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CurScoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Score</label>
    <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
    <relationshipLabel>Customers Info</relationshipLabel>
    <relationshipName>CurrentCustScoreId</relationshipName>
    <type>Lookup</type>
</CustomField>