force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__CustomerLifetimeInMonths__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CustomerLifetimeInMonths__c</fullName>
    <description>This field return the lifetime of a customer - If a Customer Churns and the Churn lookup field is loaded, then the customers Lifetime is calculated based on the Churn. For Active customers it is calculated till the current data.</description>
    <formula>IF( 
JBCXM__Churn__c == null, 
((Year(  TODAY() ) * 12 + Month( TODAY() ))-(Year( JBCXM__OriginalContractDate__c ) * 12 + Month(JBCXM__OriginalContractDate__c))) , 
((Year(JBCXM__Churn__r.JBCXM__Date__c) * 12 + Month( JBCXM__Churn__r.JBCXM__Date__c))-(Year( JBCXM__OriginalContractDate__c ) * 12 + Month(JBCXM__OriginalContractDate__c)))
)</formula>
    <inlineHelpText>This is a formula field that calculates the lifetime of a customer in Months.</inlineHelpText>
    <label>Customer Lifetime in Months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>