force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Goals__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Goals__c</fullName>
    <label>Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>