force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Industry__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Industry__c</fullName>
    <description>Customer&apos;s industry is same as the associated Account&apos;s industry.</description>
    <formula>TEXT(JBCXM__Account__r.Industry)</formula>
    <inlineHelpText>Customer Industry auto populated from the associated Account&apos;s industry.</inlineHelpText>
    <label>Industry</label>
    <type>Text</type>
</CustomField>