force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__LifeCycleInYear__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LifeCycleInYear__c</fullName>
    <formula>IF(JBCXM__OriginalContractDate__c&lt;TODAY(),ABS(FLOOR((TODAY() - JBCXM__OriginalContractDate__c)/365)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life cycle in year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>