force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__LifeCycleWeeksPerYear__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LifeCycleWeeksPerYear__c</fullName>
    <formula>IF(JBCXM__OriginalContractDate__c&lt;TODAY(),ABS(CEILING(((TODAY() - JBCXM__OriginalContractDate__c) - JBCXM__LifeCycleInYear__c*365)/7)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Life cycle weeks per year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>