force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__MRR__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MRR__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Current Monthly Recurring Revenue (MRR) of the Customer, net of all transactions to-date.</description>
    <inlineHelpText>Current Monthly Recurring Revenue (MRR) of the Customer, net of all transactions to-date.</inlineHelpText>
    <label>MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>