force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__NextRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NextRenewalDate__c</fullName>
    <description>Next Renewal Date of the customer.</description>
    <inlineHelpText>Next Renewal Date of the Customer, auto populated based on the first transaction (New Business) and subsequent renewals.</inlineHelpText>
    <label>RenewalDate</label>
    <type>Date</type>
</CustomField>