force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__NPS__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__NPS__c</fullName>
    <label>Latest NPS Score</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>