force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__OneTimeRevenue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OneTimeRevenue__c</fullName>
    <description>Aggregated amount of all One-time (non recurring) revenues from the Customer, calculated based on all transactions to-date.</description>
    <inlineHelpText>Aggregated amount of all One-time (non recurring) revenues from the Customer, calculated based on all transactions to-date.</inlineHelpText>
    <label>OneTime</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>