force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__OriginalContractDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OriginalContractDate__c</fullName>
    <description>Original Contract Date of the customer</description>
    <inlineHelpText>Customer acquisition date based on the first transaction (New Business).</inlineHelpText>
    <label>OCD</label>
    <type>Date</type>
</CustomField>