force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__OriginalContractNumber__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OriginalContractNumber__c</fullName>
    <description>Original Contract Number of the customer.</description>
    <inlineHelpText>Optional reference # of the first transaction (New Business) with the customer.</inlineHelpText>
    <label>Original Contract Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>