force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__PrevScoreId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PrevScoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Score</label>
    <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
    <relationshipLabel>Customers Info (Previous Score Id)</relationshipLabel>
    <relationshipName>PreviousCustScoringId</relationshipName>
    <type>Lookup</type>
</CustomField>