force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__RevenueBand__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__RevenueBand__c</fullName>
    <description>To store the Revenue Band to the customer</description>
    <label>RevenueBand</label>
    <length>80</length>
    <type>Text</type>
</CustomField>