force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__ScorecardComment__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScorecardComment__c</fullName>
    <label>Scorecard Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>