force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Stage__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field describes the stage of the customer</description>
    <inlineHelpText>Customer Stage is a configurable attribute that provides additional information on the customer journey / status.</inlineHelpText>
    <label>Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JBCXM__PickList__c.JBCXM__Category__c</field>
            <operation>equals</operation>
            <value>Customer Stage</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Customers Info (Customer Stage)</relationshipLabel>
    <relationshipName>Customers_Info</relationshipName>
    <type>Lookup</type>
</CustomField>