force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Status__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field describes if the customer is Active or Inactive</description>
    <inlineHelpText>Select the Customer Status, which is defaulted to Active. When the customer churns, the status is set to Churn. Select the status as inactive when the customer is not using the product, but has not officially churned.</inlineHelpText>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JBCXM__PickList__c.JBCXM__Category__c</field>
            <operation>equals</operation>
            <value>Customer Status</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Customer Status</relationshipLabel>
    <relationshipName>CustomersInfoStatus</relationshipName>
    <type>Lookup</type>
</CustomField>