force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Tag__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Tag__c</fullName>
    <label>Tag</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
            <value>
                <fullName>Established</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Up-sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>