force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__TrendIndicator__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TrendIndicator__c</fullName>
    <label>Trend Indicator</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>