force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__UltimateParent__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__UltimateParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers Info (Ultimate Parent)</relationshipLabel>
    <relationshipName>UltimateParent</relationshipName>
    <type>Lookup</type>
</CustomField>