force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/JBCXM__Users__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Users__c</fullName>
    <description>Number of licensed users of the customer.</description>
    <inlineHelpText>Number of user licenses purchased by the customer. This number is aggregated from all customer transactions to-date.</inlineHelpText>
    <label>Users</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>